--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "undici": "5.22.1",
     "vite": "4.4.0",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "framer-motion": "^10.12.21",
+    "unocss": "^0.53.5"
   }
 }
